syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountPortoService {
	// services: 
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);

	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);

	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

// Get
message GetDiscountRequest {
	string productName = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

// Create 
message CreateDiscountRequest {
	CouponModel coupon = 1;
}

// Update 
message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

// Delete 
message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

